Need to use add_opens also in Besteller or...
...it won't run anymore with recent Java